# advent-of-code

./: README.md  project.org
2021/: flake.nix  gleam.toml  manifest.toml
2021/src/: aoc.gleam  day1.gleam  util.gleam
2022/1/: 1.rkt
2022/2/: 2.rkt
2022/3/: 3.rkt  input
2022/4/: 4.rkt
2022/5/: 5.rkt
2022/6/: 6.rkt
2022/7/: 7.rkt
2023/: Cargo.toml  justfile
2023/1/: Cargo.toml
2023/day-1/: Cargo.toml
2023/day-1/src/: main.rs
2023/day-2/: Cargo.toml  input1  justfile
2023/day-2/src/: game.rs  lib.rs  parse.rs  part1.rs  part2.rs
2023/day-3/: Cargo.toml
2023/day-3/src/: gear.rs  lib.rs  part1.rs  part2.rs
2023/day-4/: Cargo.toml  justfile
2023/day-4/src/: aoc_error.rs  lib.rs  parse.rs  part1.rs  part2.rs  scratchcard.rs
2023/day-5/: Cargo.toml
2023/day-5/src/: almanac.rs  lib.rs  parse.rs  part1.rs  part2.rs
2023/day-6/: Cargo.toml
2023/day-6/src/: lib.rs  parse.rs  part1.rs  part2.rs  races.rs
2023/day-7/: Cargo.toml
2023/day-7/src/: aoc_error.rs  cards.rs  lib.rs  parse.rs  part1.rs  part2.rs
2023/day-8/: Cargo.toml
2023/day-8/src/: lib.rs  network.rs  parse.rs  part1.rs  part2.rs
2023/day-9/: Cargo.toml
2023/day-9/src/: lib.rs  parse.rs  part1.rs  part2.rs  readings.rs
2023/template/: Cargo.toml  justfile
2023/template/src/: lib.rs  part1.rs  part2.rs
2024/: dune-project  flake.nix
2024/lib/: aoc.ml  common.ml  day1.ml  day2.ml  day3.ml  day4.ml  dune
2024/opam/: aoc2024.opam
gleam2022/: README.md  gleam.toml
gleam2022/src/: gleam2022.gleam
