[package]
name = "day-8"
version = "0.1.0"
edition = "2021"
default-run = "part2"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
num-integer = "0.1.45"
regex = { workspace = true }
rstest = { workspace = true }
thiserror = { workspace = true }
